force-app/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>Discount: Decreases the financial amount
Access-Promo: Access to proceed/purchase an item or a promotional code for an item benefit
Source: A tracking code to follow a user through a flow, such as in an embedded URL</description>
    <inlineHelpText>Discount: Decreases the financial amount
Access-Promo: Access to proceed/purchase an item or a promotional code for an item benefit
Source: A tracking code to follow a user through a flow, such as in an embedded URL</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
                <default>true</default>
                <label>Discount</label>
            </value>
            <value>
                <fullName>Access-Promo</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>