force-app/main/default/objects/bt_stripe__Code__c/fields/bt_stripe__Valid_Through__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Valid_Through__c</fullName>
    <inlineHelpText>If set, the Code can only be used before or on the Date.</inlineHelpText>
    <label>Valid Through</label>
    <type>Date</type>
</CustomField>